tests/agl/rejections/type/ctor_pos_only_by_name.agl
record R
  @pos
  x: int
  y: int
let r = R(x = 1, y = 2)
print r.x
